job card care arata nr aplicatii admise/respinse